test/classes/initializers/siblingCall/inCobeginOn.good
inCobeginOn.chpl:4: In initializer:
inCobeginOn.chpl:7: error: use of this.init() call in a parallel statement
